# chess

./: .gitignore  CMakeLists.txt  README.md
include/chess/: attacks.hpp  bitboard.hpp  board.hpp  board_bb.hpp  eval.hpp  game.hpp  move.hpp  piece.hpp  search_bb.hpp  strategy.hpp  types.hpp
practice/: ex0.py
practice/bitboard_primer/: ex0.cpp
src/: attacks.cpp  board.cpp  board_bb.cpp  eval.cpp  game.cpp  main.cpp  piece.cpp  search_bb.cpp  strategy_minimax.cpp
tests/: test_chess.cpp
tools/: perft.cpp  perft_bb.cpp  uci_main.cpp
